samples/_failures_safe/1761348972_31e275_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2888a143.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_2888a143.c:157:9: error: expected declaration or statement at end of input
  157 |         lexer_advance(state);
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_2888a143.c:157:9: error: expected declaration or statement at end of input
